# outsourced-computing

./: .gitmodules  README.md
monero-poc/: README.md
monero-poc/verifier/: CMakeLists.txt  Dockerfile  README.md  build_docker.sh  connection.cpp  keyUtils.cpp  keyUtils.h  main.cpp  nodeVerifier.cpp  nodeVerifier.h  testnetDispatcher.cpp  utils.h  verifierLib.cpp  verifierLib.h  xmr.cpp  xmr.h
oracle-machines/: README.md  oracle-machines.md
